--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
 ---
 title = data inventory of buildings
-desc: bar plot, point plot, and boxplot
-layout: vegalite_example
+desc: visualizations of data 
 ---
 
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -64,7 +63,7 @@ layout: vegalite_example
     </script>
 </body>
 
-</html>
+</html> -->
 
 
 <!-- {
