--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ desc: visualizations of data
                 "data": {
                     "url": "https://raw.githubusercontent.com/UIUC-iSchool-DataViz/fall2023-acg-acu/main/data/building_inventory.csv"
                 },
-                "mark": "line", // Change 'line' to 'point' for scatter plot
+                "mark": "bar",
                 "encoding": {
                     "x": { "field": "YEAR BUILT", "type": "ordinal", "axis": { "title": "Year Constructed" } },
                     "y": { "aggregate": "count", "type": "quantitative", "axis": { "title": "Count" } },
@@ -69,6 +69,7 @@ desc: visualizations of data
 </body>
 
 </html>
+
 
 
 
