--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ desc: visualizations of data
             },
             "mark": "bar",
             "encoding": {
-                "x": { "field": "Congress Dist", "type": "nominal", "axis": { "title": "Building Type" } },
+                "x": { "field": "Congress Dist", "type": "nominal", "axis": { "title": "Congress Dist" } },
                 "y": { "aggregate": "count", "type": "quantitative", "axis": { "title": "Count" } }
             }
         };
